--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.5
   flutter_speed_dial: ^6.2.0
   sqflite: ^2.2.8+4
+  flutter_material_color_picker: ^1.2.0 
 
 dev_dependencies:
   flutter_test:
