--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,12 @@ dependencies:
   flutter_speed_dial: ^6.2.0
   sqflite: ^2.2.8+4
   flutter_material_color_picker: ^1.2.0
-  fluttertoast: ^8.2.2 
-
+  fluttertoast: ^8.2.2
+  flutter_slidable: ^3.0.0
+  percent_indicator: ^4.2.3
+  charts_flutter: ^0.12.0
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -59,13 +63,13 @@ dev_dependencies:
 flutter:
 
   # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
+  # included with your application, so t5hat you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/Empty.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -93,3 +97,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  
