--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   percent_indicator: ^4.2.3
   charts_flutter: ^0.12.0
+  shared_preferences: ^2.2.0
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
 dev_dependencies:
